--- a/src/main/resources/templates/email/welcome.html
+++ b/src/main/resources/templates/email/welcome.html
@@ -187,8 +187,21 @@
             <!-- CTA -->
             <div style="text-align: center; margin-top: 32px;">
                 <a th:href="${frontendUrl}" class="cta-button" href="https://tcgarena.it">
-                    Inizia ora
+                    Inizia ora su Web
                 </a>
+                <p style="font-size: 14px; color: #6b7280; margin-top: 16px;">
+                    Oppure scarica l'app gratuita:
+                </p>
+                <div style="margin-top: 16px;">
+                    <a href="https://apps.apple.com/it/app/tcg-arena/id1234567890" style="margin-right: 12px;">
+                        <img src="https://developer.apple.com/app-store/marketing/guidelines/images/badge-download-on-the-app-store.svg" 
+                             alt="Download on the App Store" style="height: 40px; width: auto;">
+                    </a>
+                    <a href="https://play.google.com/store/apps/details?id=it.tcgarena.app">
+                        <img src="https://play.google.com/intl/en_us/badges/static/images/badges/en_badge_web_generic.png" 
+                             alt="Get it on Google Play" style="height: 40px; width: auto;">
+                    </a>
+                </div>
             </div>
             
             <p style="font-size: 14px; color: #6b7280; text-align: center; margin-top: 32px;">
